# 3d-tts-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt  tts_environment.yml
3d-tts-sim/: cim_array.py  llm_shape_profile.py
3d-tts-sim archive/: cim_array.py  llm_shape_profile.py  main.py  pe.py  run_shape_profile_local.sh
3d-tts-sim archive/mem/: cacti_config.py  mem_instance.py
3d-tts-sim archive/refs/Simulator_V3_backup_1116/: main_for_attn_baseline_for_plot.py  main_for_attn_seqparal_predsparse.py  main_for_ffn_baseline.py  run_all_scripts.sh
3d-tts-sim/mem/: cacti_simulation.py  dram.md  dram_cycle_test.py  dram_instance.py  dram_latency.py
3d-tts-sim/refs/Simulator_V3_backup_1116/: main_for_attn_baseline.py  main_for_attn_baseline2.py  main_for_attn_seqparal.py  main_for_compare_attn.py  main_for_crossattn_baseline.py  main_for_infinity2B_SP.py  main_for_infinity2B_baseline.py  main_for_infinity2B_baseline2.py
3d-tts-sw/: .gitignore  LICENSE  README.md  environment.yml
3d-tts-sw/compute-optimal-tts/: index.html
3d-tts-sw/compute-optimal-tts/models/: download.sh
3d-tts-sw/compute-optimal-tts/src/: eval_with_rm.py  find_majority_vote.py  gen_workload_beam_1.py  identify_straggler.py  requirements-tts-env.txt  requirements.txt  utils.py
3d-tts-sw/predictor/: README.md  __init__.py  __main__.py  adaptive_threshold_dataset.py  adaptive_threshold_evaluate.py  adaptive_threshold_features.py  adaptive_threshold_model.py  adaptive_threshold_trainer.py  config.py  predict_workload.py  record_step_predict.py  record_utils.py
3d-tts-sw/predictor/result/: model_workloads_1.5b_7b_deterministic_no_prun.txt  model_workloads_test_mlp.txt
3d-tts-sw/src/envs/: __init__.py  base_env.py
3d-tts-sw/src/scripts/: run.sh  serve_gpu1.sh  serve_gpu3_2-1.sh  serve_gpu4.sh
mem/: __init__.py  dram.md  dram_latency.py
refs/Simulator_V3_backup_1116/: main_for_attn_baseline_with_energy.py  main_for_crossattn_seqparal.py  main_for_ffn_baseline2.py  main_for_infinity2B_SP_PS.py  main_for_tfblock_baseline.py
(+219 files in other folders)
