[project]
name = "3d-tts-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.2",
    "antlr4-python3-runtime==4.11.1",
    "deepspeed>=0.18.7",
    "dm-env>=1.6",
    "dm-tree>=0.1.8",
    "fastchat>=0.1.0",
    "fschat[model-worker,webui]>=0.2.36",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "modelscope>=1.34.0",
    "numpy<2",
    "pylatexenc>=2.10",
    "ray[default]==2.38.0",
    "scipy>=1.15.3",
    "setproctitle>=1.3.7",
    "setuptools>=82.0.1",
    "setuptools-scm>=9.2.2",
    "sympy>=1.13.1",
    "timeout-decorator>=0.5.0",
    "torch==2.5.1",
    "transformers==4.47.0",
    "typing-extensions>=4.15.0",
    "vllm==0.6.4.post1",
    "word2number>=1.1",
]
